Media information:
* add Windows support for accessing memory device
* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?
* add support for reading from floppy \\.\A: for builder5 compilation

Test:
* add autoconf/make test suite

20160111
* Changes to Python bindings

20160109
* worked on Python 3 support
* fixes for rpmbuild

20160108
* 2016 update
* worked on Python 3 support

20151219
* updated dependencies

20151216
* block aligned read now enabled by default

20150905
* updated dependencies

20150105
* 2015 update
* fixed copyright in pysmdev/pysmdev_handle.c

20141229
* updated dpkg files
* updated dependencies
* updated .gitignore

20141225
* worked on Python 3 support

20141129
* code clean up

20141027
* changes for deployment

20141021
* changes for deployment

20141004
* bug fix in Python-bindings

20140928
* removed README.macosx
* changes for project site move

20140803
* bug fix in Python-bindings

20140728
* updated python.m4
* updated dpkg files

20140529
* improved dealing with paths in pysmdev on Windows

20140527
* fixes for dealing with Unicode paths in pysmdev
* fixes for OSX python build
* updated dependencies

20140526
* fadvise bug fix

20140525
* worked on non-blocking Windows device file support

20140503
* updated libcfile

20140502
* worked on block-based read to support Windows device files

20140501
* worked on Python bindings
* updated libcfile
* worked on block-based read to support Windows device files

20140428
* worked on Python bindings
* added DIOCGSECTORSIZE support for FreeBSD

20140406
* updated to include header

20140323
* added read/write at offset functions
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131210
* updated dependencies
* added libcthreads

20130901
* code clean up

20130416
* updated dependencies