@@ -2,7 +2,7 @@ Source: libsmdev
 Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev, python-dev, python3-dev
+Build-Depends: debhelper (>= 7), autotools-dev, python-all-dev, python3-all-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libsmdev/
 
