@@ -34,6 +34,9 @@ Media information:
 Test:
 * add autoconf/make test suite
 
+20160320
+* worked on support for devices without bytes per sector support e.g. /dev/zero
+
 20160111
 * Changes to Python bindings
 
